    * [FELIX-5290] - Locking Configuration Records (OSGi R7)
    * [FELIX-5291] - Improve Configuration Updates (OSGi R7)
    * [FELIX-5292] - Capabilities (OSGi R7)
    * [FELIX-5293] - Improved ConfigurationPlugin Support (OSGi R7)
    * [FELIX-5468] - Refactor persistence handling
    * [FELIX-5695] - Use Java 7 as base version


Changes from 1.8.14 to 1.8.16
-----------------------------
** Bug
    * [FELIX-5669] : Registering a PersistenceManager causes duplicate caches.


Changes from 1.8.12 to 1.8.14
-----------------------------
** Bug
    * [FELIX-5443] - Frequent Changes cause UpdateThread to ConcurrentModificationException
    * [FELIX-5435] - Service does not get loaded with updated properties that have been modified on file system after felix framework restart


Changes from 1.8.10 to 1.8.12
-----------------------------

** Improvement
    * [FELIX-5380] - Reduce quite useless log verbosity
    * [FELIX-5366] - Additional Unit Tests for ConfigurationHandler

** Bug
    * [FELIX-5368] - ConfigurationManager ignores NotCachablePersistenceManager marker interface
    * [FELIX-5385] - ConfigAdmin uses wrong security when calling ManagedServices


Changes from 1.8.8 to 1.8.10
----------------------------

** Improvement
    * [FELIX-5088] - CaseSensitiveDictionary should implement equals()
    * [FELIX-5211] - Use provide/require capabilities instead of obsolete and meaningless import-export service headers

** Bug
    * [FELIX-5301] - ConfigurationPlugin support is not spec compliant


Changes from 1.8.6 to 1.8.8
---------------------------

** Improvement
    * [FELIX-4917] - FilePersistenceManager doesn't support comments

** Bug
    * [FELIX-4962] - Configadmin leaks caller's security context downstream
    * [FELIX-4945] - Escaped folder names makes ConfigAdmin incompatible and factory configs not always work


Changes from 1.8.4 to 1.8.6
---------------------------

** Improvement